mule-user-guide/v/3.8/6-troubleshooting-and-next-steps.adoc
= Troubleshooting and Next Steps
:keywords: clusters, deploy

[TIP]
You can now easily create a cluster through the Runtime Manager UI. See link:/runtime-manager/managing-servers#create-a-cluster[Creating and Managing Clusters].

== Troubleshooting Ports

The *Mule HA Demo Bundle* uses the following ports on your local drive:

* 7777 for Mule server 1
* 7778 for Mule server 2
* 8585 for the Mule Management Console
* 8080 and 61616 for the WidgetUI Web app

If you currently use one or more of these ports for other purposes, you can change the ports that the WidgetUI Web app and Mule servers use.

=== Change the WidgetUI Port

In your *Terminal* or *Console*, execute the following script in the `cluster/widgetUI` folder: +
 `play run --http.port=YOUR_CUSTOM_PORT` +
 For example, execute `play run --http.port=8090`

=== Change the Servers’ Ports

In your *Terminal* or *Console*, execute a `startServer` script with the following system property: +
 `startServer1 -M-Dmule.mmc.bind.port=YOUR_CUSTOM_PORT` +
 For example, execute `startServer1 -M-Dmule.mmc.bind.port=7779`

== Troubleshooting WidgetUI

If the *Time to Complete Processing of Widget* pane is not rendering correctly, refresh the Web browser page.

== Next Steps

Explore our documentation to learn more more about Mule clustering and high availability.

* link:https://www.mulesoft.com/platform/integration-manager[Download a trial] of Mule with the Mule Management Console to experiment with High Availability. (Download **Runtime - Mule  Enterprise (with Management Tools)**.)
* link:/mule-user-guide/v/3.8/installing-an-enterprise-license[Install an Enterprise License] to begin using the Mule Management Console to manage clusters in production.
* For more information about Mule high availability, consult the link:/mule-user-guide/v/3.8/mule-high-availability-ha-clusters[Mule High Availability] documentation.
* For more information about Mule clustering, consult the link:/mule-management-console/v/3.7/configuring-mule-ha-clustering[Mule HA Clustering] documentation.
* For more information on managing Mule clusters, consult the link:/mule-management-console/v/3.7/managing-mule-high-availability-ha-clusters[Managing HA Clusters] documentation.
* For more information on managing Mule clusters using REST APIs, consult the link:/mule-management-console/v/3.7/rest-api-reference[REST API Reference] documentation.
* For more information on creating or disbanding clusters, consult link:/mule-management-console/v/3.7/creating-or-disbanding-a-cluster[Creating or Disbanding a Cluster] documentation.

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
